k8s/event-type-management-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-type-management-api
  namespace: event-flex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-type-management-api
  template:
    metadata:
      labels:
        app: event-type-management-api
    spec:
      containers:
      - name: event-type-management-api
        image: eventflex.azurecr.io/event-type-management-api:$(Build.BuildId)
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
