k8s/event-type-management-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-type-management-api
  namespace: event-flex
spec:
  type: ClusterIP
  selector:
    app: event-type-management-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
